Release Notes - Felix - Version org.apache.felix.dependencymanager-r11
======================================================================

** List of bundles being part of the release:
    * org.apache.felix.dependencymanager; version=4.4.1
    * org.apache.felix.dependencymanager.shell; version=4.0.6
    * org.apache.felix.dependencymanager.runtime; version=4.0.5
    * org.apache.felix.dependencymanager.annotation; version=4.2.1
    * org.apache.felix.dependencymanager.lambda; version=1.1.1

** Bug
    * [FELIX-5630] - NullObject is created for a required dependency if the component is removed and added again to the dependency manager
    * [FELIX-5636] - Component of aspect service does not have any service properties anymore

** Improvement
    * [FELIX-5619] - MultiProperyFilterIndex memory consumption
    * [FELIX-5623] - Improve performance of ComponentImpl.getName method
    * [FELIX-5658] - Include poms in dm artifacts

Release Notes - Felix - Version org.apache.felix.dependencymanager-r9
======================================================================

** List of bundles being part of the release:
    * org.apache.felix.dependencymanager; version=4.4.0
    * org.apache.felix.dependencymanager.shell; version=4.0.5
    * org.apache.felix.dependencymanager.runtime; version=4.0.4
    * org.apache.felix.dependencymanager.annotation; version=4.2.0
    * org.apache.felix.dependencymanager.lambda; version=1.1.0

** Bug
    * [FELIX-5236] - Single @Property annotation on a type doesn't work
    * [FELIX-5242] - Configuration updates may be missed when the component is restarting
    * [FELIX-5244] - Can't inject service using a method ref on a parent class method.
    * [FELIX-5245] - Typo in error logged when a component callback is not found.
    * [FELIX-5268] - Service not unregistered while bundle is starting
    * [FELIX-5273] - Wrong log when a callback is not found from component instance(s)