@@ -1,0 +1,48 @@
+/*
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
+ *
+ *   http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the License is distributed on an
+ * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+ * KIND, either express or implied.  See the License for the
+ * specific language governing permissions and limitations
+ * under the License.
+ */
+package org.apache.felix.dm.itest.api;
+
+import java.util.Properties;
+
+import org.apache.felix.dm.Component;
+import org.apache.felix.dm.DependencyManager;
+import org.apache.felix.dm.itest.util.TestBase;
+import org.junit.Assert;
+
+/**
+ * @author <a href="mailto:dev@felix.apache.org">Felix Project Team</a>
+ */
+public class FELIX5683_GetServicePropertiesReturnsNullTest extends TestBase {
+
+    public void testServiceProperties() throws Exception {
+        final DependencyManager dm = getDM();
+        Component provider = dm.createComponent();
+        
+        provider.setImplementation(new ProviderImpl())
+        		.setInterface(Provider.class.getName(), new Properties()); 
+        Assert.assertNotNull(provider.getServiceProperties());
+        dm.clear();
+    }
+
+    public interface Provider {    
+    }
+    
+    public class ProviderImpl implements Provider {    	
+    }
+}
